--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-handlebars": "^3.1.0",
     "github-markdown-css": "^3.0.1",
-    "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "showdown": "^1.9.1"
+    "showdown": "^1.9.1",
+    "showdown-highlight": "^2.1.3"
   }
 }
