--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node build.js && netlify dev",
     "dev": "node build.js && netlify dev",
     "build": "node build.js"
   },
