--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node build.js && netlify dev",
+    "dev": "node build.js && netlify dev",
+    "build": "node build.js"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "clipboard": "^2.0.4",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-handlebars": "^3.1.0",
+    "fs-extra": "^9.0.1",
     "github-markdown-css": "^3.0.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "serverless-http": "^2.5.0",
     "showdown": "^1.9.1",
     "showdown-highlight": "^2.1.3"
   }
